# SimuFlight

./: .gitignore  01-2d-flight-dynamics.md  02-numerical-simulation-engine.md  03-simulated-sensor-system.md  04-closed-loop-flight-controllers.md  05-actuator-modeling.md  06-mission-state-machine.md  07-fault-injection-system.md  08-config-driven-scenario-runner.md  09-telemetry-event-logging.md  10-mission-validation.md  11-diagnostic-visualization.md  12-automated-tests.md  13-numerical-verification.md  14-polished-cli.md  15-polished-readme-documentation.md  AGENTS.md  PROJECT_MASTER_BLUEPRINT.md  PROJECT_SELECTION_BRIEF.md  README.md  TECH_STACK_AND_ARCHITECTURE.md  pyproject.toml
docs/: ARCHITECTURE.md  BUILD_LOG.md  DEMO_SCRIPT.md  FEATURE_INDEX.md  INTERVIEW_STORY.md  NUMERICAL_VERIFICATION.md  PROJECT_BRIEF.md  ROADMAP.md  TESTING_STRATEGY.md
scenarios/: altimeter_freeze.toml  degraded_actuator.toml  nominal.toml  sensor_delay.toml  velocity_bias.toml
src/astraloop/: __init__.py  __main__.py  cli.py
src/astraloop/actuators/: __init__.py  models.py
src/astraloop/config/: __init__.py  loader.py  schema.py
src/astraloop/control/: __init__.py  flight_controller.py  pid.py
tests/: __init__.py
tests/architecture/: test_boundaries.py
tests/docs/: test_documentation_contract.py
tests/integration/: test_artifact_bundle.py  test_cli_entrypoint.py
tests/numerical/: __init__.py  reference.py  test_rk4_verification.py  test_vehicle_reference.py
tests/scenarios/: test_scenario_contracts.py
tests/unit/: test_cli.py  test_config_validation.py  test_core_models.py  test_sensors_mission_faults.py
(+29 files in other folders)
