[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "astraloop"
version = "0.1.0"
description = "Deterministic software-in-the-loop flight control and validation system"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "matplotlib>=3.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/astraloop"]
