[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "astraloop"
version = "0.1.0"
description = "Deterministic software-in-the-loop flight control and validation system"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "matplotlib>=3.9"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.9", "pyright>=1.1.390", "scipy>=1.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
markers = [
  "scenario: complete configured mission regression",
  "numerical: analytical or independent numerical verification",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/astraloop"]
